finished scaffold and init wallet API

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,9 @@ MINIWALLET_DB_USER=postgres
 MINIWALLET_DB_NAME=mini_wallet
 MINIWALLET_DB_HOST=localhost
 
+# token config
+MINIWALLET_TOKEN_EXPIRE=24
+
+
 
 
